=== 1.0 GA (v 1.0.0.0), ???, ??? ===




=== 1.0 CR 2 (v 0.9.9.2), 2011-07-31, NH 3.2 GA ===

** Bug
[NHE-15] - Support for <set> with sort="customComparer"
[NHE-16] - Support for <map> with sort="customComparer"

** Improvement
[NHE-14] - Support custom (NH Core) CollectionTypeFactory



=== 1.0 CR 1 (v 0.9.9.1), 2011-06-20, NH 3.2.0 Beta 2 ===

* Bug 
[NHE-12] - Dynamic Components cause envers to crash on initialization



=== BETA 2 (v 0.9.2.0), 2011-05-10, NH 3.2.0 Alpha 3 ===

*** Breaking changes ***
* Changed API: AuditJoinTableAttribute
* Changed API: AuditOverrideAttribute
* Changed API: Removed AuditOverridesAttribute, added allowmultiple on AuditOverrideAttribute instead
* Using IAuditReader with closed ISession throws ObjectDisposedException (like NH Core) instead of a System.Exception



=== BETA 1 (v 0.9.1.0), 2011-04-11, NH 3.2.0 Alpha 1 ===

** Bug
[NHE-8] - Rollback of audit data if exception when flushmode.never is used
[NHE-9] - Query component properties using "."

** Improvement
[NHE-10] - Support for IAuditReader.FindRevisions()

** New Feature
[NHE-1] - Port audit strategy


*** Breaking changes ***
* Changed signature: IAuditReader.FindRevision(Type, long) -> IAuditReader.FindRevision(long)
* Changed signature: IAuditReader.GetCurrentRevision(Type, bool) -> IAuditReader.GetCurrentRevision(bool)



=== ALPHA 2 (v 0.8.2.0), 2011-03-14, NH 3.1.0 ===

[NHE-5] - Documentation

*** Breaking changes ***
* Renamed IFluentAudit<T>.ExcludeRelation to ExcludeRelationData
* AuditMappedByAttribute no longer public for users. Handled automatically internally.
* Renamed envers.store_data_at_delete to nhibernate.envers.store_data_at_delete
* Renamed envers.do_not_audit_optimistic_locking_field to nhibernate.envers.do_not_audit_optimistic_locking_field



=== ALPHA 1 (v 0.8.1.0), 2011-03-05, NH 3.1.0 ===

[NHE-2] - Biref onetoone on pk
[NHE-3] - Support access="readonly"
[NHE-4] - Structs as components - querying
[NHE-6] - Bidirectional list support